metodo de impresion correcto

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,6 +39,7 @@ android {
         applicationId "com.example.postjava"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+       // se debe cambiar si se puede compilar el min de sdk 19 target 26, compile version 26
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -53,6 +54,21 @@ android {
         }
     }
 }
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation files('libs/SmartPos_1.6.8_R230206.jar')
+    implementation files('libs/scan_activate_2.1.6.jar')
+    implementation files('libs/gson-2.2.4.jar')
+    implementation files('libs/gson-2.2.4.jar')
+    implementation files('libs/scan_activate_2.1.6.jar')
+    implementation files('libs/SmartPos_1.6.8_R230206.jar')
+
+
+}
+
+
 
 flutter {
     source '../..'
