--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: postjava
-description: A new Flutter project.
+description: A new Proyecto de PRD.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -7,19 +7,20 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.2.19
   http: ^0.13.6
-
-
-  cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  shared_preferences: ^2.1.1
+  stack_trace: ^1.10.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
-
 
 flutter:
   uses-material-design: true
