--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   stack_trace: ^1.10.0
+  #intl: ^0.18.1
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
