--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,10 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   http: ^0.13.6
+  intl: ^0.18.1
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   stack_trace: ^1.10.0  
-  #intl: ^0.18.1
-
 
 dev_dependencies:
   flutter_lints: ^2.0.0
