--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: 'assets/images/prd_blue.png'
+  android: true
+  #ios: true
+
 flutter:
   uses-material-design: true
   assets:
