--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.1.1
   stack_trace: ^1.10.0
   pretty_qr_code: ^2.0.3
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
