--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   stack_trace: ^1.10.0
   pretty_qr_code: ^2.0.3
   animated_splash_screen: ^1.3.0
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -34,3 +35,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/svg/
