--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   pretty_qr_code: ^2.0.3
   animated_splash_screen: ^1.3.0
   flutter_svg: ^2.0.5 
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
